Regenerate graalvm reachability-metadata.json